--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.7",
     "pinyin-engine": "^1.2.2",
     "shelljs": "^0.8.4",
+    "sitemap": "^7.0.0",
     "socket.io": "^4.0.1",
     "systeminformation": "^5.9.3"
   },
