--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "log4js": "^6.3.0",
+    "log4js": "^6.5.2",
     "mongodb": "^4.2.2",
     "mongoose": "^5.13.13",
     "multer": "^1.4.4",
+    "node-media-server": "^2.3.12",
     "nodemon": "^2.0.7",
     "pinyin-engine": "^1.2.2",
-    "shelljs": "^0.8.4",
+    "shelljs": "^0.8.5",
     "sitemap": "^7.0.0",
     "socket.io": "^4.0.1",
     "systeminformation": "^5.9.3"
