--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon",
-    "test": "npm audit fix --dry-run --json",
-    "build": "yarn test && webpack --config build.js --mode production"
+    "check": "npm audit fix --dry-run --json",
+    "build": "webpack --config build.js --mode production"
   },
   "author": "SeaHappy",
   "license": "ISC",
@@ -19,9 +19,9 @@
     "log4js": "^6.5.2",
     "mongodb": "^4.2.2",
     "mongoose": "^5.13.13",
-    "multer": "^1.4.4",
-    "node-media-server": "^2.3.12",
-    "nodemon": "^2.0.7",
+    "multer": "^1.4.5-lts.1",
+    "node-media-server": "^2.4.6",
+    "nodemon": "^2.0.19",
     "pinyin-engine": "^1.2.2",
     "shelljs": "^0.8.5",
     "sitemap": "^7.0.0",
